--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"date":"Updated 2024-09-19","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
+{"date":"Updated 2025-03-04","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2024-09-19</h2>
+<h2 class="date">Updated 2025-03-04</h2>
 </div>
 </div>
 
@@ -215,9 +215,9 @@ Wright</a>
 <h2>Career History</h2>
 <table>
 <colgroup>
-<col width="4%" />
-<col width="39%" />
-<col width="56%" />
+<col width="2%" />
+<col width="18%" />
+<col width="78%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -228,46 +228,51 @@ Wright</a>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">2024 — current</td>
+<td align="left">2025 — current</td>
+<td align="left"><span style="font-weight: 500">Project Manager</span>, Applied Survey Research</td>
+<td align="left">Translate high-level project goals into actionable work plans, ensuring that every phase moves forward smoothly and on schedule. Oversee project implementation, anticipating resource needs, troubleshooting challenges, and making strategic adjustments when necessary. Manage relationships with partners and stakeholders, ensuring their needs are met through clear communication and collaboration. Delegate effectively, solve problems proactively, and keep projects on track from start to finish. Focus on maintaining momentum, driving results, and continuously improving processes to deliver successful outcomes.</td>
+</tr>
+<tr class="even">
+<td align="left">2024 — 2025</td>
 <td align="left"><span style="font-weight: 500">Senior Research Analyst</span>, Applied Survey Research</td>
 <td align="left">Assist in the design and implementation of community-based research, evaluation, assessment, and strategic planning projects via survey development, data cleaning, data analysis and report writing</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2023 — 2024</td>
 <td align="left"><span style="font-weight: 500">Researcher</span>, Marzano Research</td>
 <td align="left">Support and lead multiple aspects of education research and evaluation studies and technical assistance projects via data collection, management, and analysis as well as meeting facilitation and report writing</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2021 — 2023</td>
 <td align="left"><span style="font-weight: 500">Clinical Supervisor</span>, University of Oregon</td>
 <td align="left">Provide clinical supervision to Master’s students in the Communication Disorders and Sciences program, primarily for treatment sessions in the School-Age Clinic and the Brain Injury and Concussion Clinic</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2022 — 2023</td>
 <td align="left"><span style="font-weight: 500">Research Associate</span>, Marzano Research</td>
 <td align="left">Support multiple aspects of education research and evaluation studies designed to inform educational improvement through the provision of technical support and communication of findings</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2016 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Amita Health Care: Alexian Brothers Medical Center – <em>Elk Grove Village, IL</em></td>
 <td align="left">Provided swallowing, speech, and language assessment and treatment in an acute care setting on a PRN basis</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2015 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago Public Schools – <em>Chicago, IL</em></td>
 <td align="left">Provided direct and indirect speech and language services in the pre-K through grade 12 setting across a total of 4 schools</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2015 — 2016</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Education Solutions, LLC – <em>Chicago, IL</em></td>
 <td align="left">Provided direct speech and language therapy for students in private schools</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">2014 — 2015</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago International Charter Schools – <em>Chicago, IL</em></td>
 <td align="left">Provided direct and indirect speech and language services to a caseload of 40 students across one elementary school and one high school</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2014 — 2014</td>
 <td align="left"><span style="font-weight: 500">Graduate Student Clinician</span>, Edward Hines, Jr. VA Hospital – <em>Hines, IL</em></td>
 <td align="left">Completed 10-week graduate student rotation where I obtained experience providing inpatient and outpatient speech therapy services to veterans</td>
@@ -616,7 +621,7 @@ Wright</a>
 </colgroup>
 <tbody>
 <tr class="odd">
-<td align="left"></td>
+<td align="left">2024</td>
 <td align="left">11.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span>, Usacheva, M., &amp; Flamenco, A (2024). Youth Suicide Prevention Gap Analysis - Prepared for the Sacramento County Department of Health Services, Division of Behavioral Health Services. <em>Applied Survey Research</em>.</td>
 </tr>
@@ -626,7 +631,7 @@ Wright</a>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Colvig-Niclai, L (2024). Developmental Screening Gap Asessment - Prepared for First 5 Kern County. <em>Applied Survey Research</em>.</td>
 </tr>
 <tr class="odd">
-<td align="left">2024</td>
+<td align="left"></td>
 <td align="left">9.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Brutschy, S (2024). Universal Pre-Kindergarten and Mixed Delivery Survey: Spring 2024 - Prepared for the Santa Cruz County Office of Education. <em>Applied Survey Research</em>.</td>
 </tr>
@@ -636,7 +641,7 @@ Wright</a>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Colvig-Niclai, L (2024). Universal Pre-Kindergarten and Mixed Delivery Survey: Spring 2024 - Prepared for the Butte County Office of Education. <em>Applied Survey Research</em>.</td>
 </tr>
 <tr class="odd">
-<td align="left"></td>
+<td align="left">2023</td>
 <td align="left">7.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span>, Rosario, E., Schwartzbard, R., &amp; Scott, C (2023). WY BILT project: Year 3 annual report - Prepared for the Wyoming Department of Education. <em>Marzano Research</em>.</td>
 </tr>
@@ -646,7 +651,7 @@ Wright</a>
 <td align="left">Cherasaro, T., Keough, S., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; Final evaluation report - Prepared for the South Dakota Department of Education. <em>Marzano Research</em>.</td>
 </tr>
 <tr class="odd">
-<td align="left">2023</td>
+<td align="left"></td>
 <td align="left">5.</td>
 <td align="left">Scott, C., Wolfe, C., Rice, D., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Wyoming Accountability Part 1: An examination of the current system - Prepared for the Wyoming Department of Education. <em>Marzano Research</em>.</td>
 </tr>
@@ -705,8 +710,6 @@ Wright</a>
 <div id="honors-and-awards" class="section level1 submitted nohead">
 <h1>Honors and Awards</h1>
 <div class="hangingindent">
-
-
 <table>
 <colgroup>
 <col width="1%" />
@@ -729,6 +732,7 @@ Wright</a>
 </tr>
 </tbody>
 </table>
+</div>
 </div>
 </div>
 
