--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <div class = "last", id="bloc2">Wright</div>
 </div>
 <div id = "position", class = "position">
-Senior Research Analyst at Applied Survey Research
+Project Manager at Applied Survey Research
 </div>
 <div id = "sub", class = "sub">
 Curriculum Vita
@@ -99,9 +99,9 @@ Curriculum Vita
 About Me
 </h2>
 <p>
-I am primarily interested in multidisciplinary concussion management
-and the development of empirically driven return-to-learn guidelines for
-students recovering from concussion.
+I specialize in research methodology, implementation science,
+statistical analysis, and data collection, management, and
+visualization.
 </p>
 <!-- The style and format of this CV developed by [Daniel Anderson, Ph.D.](https://github.com/datalorax)  -->
 </div>
