Updates for May 2025 application

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"date":"Updated 2025-03-04","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
+{"date":"Updated 2025-05-24","links-to-footnotes":false,"newpage_html_class":"page-break-after","output":{"pagedown::html_paged":{"css":["anderson-cv.css"],"number_sections":false,"self_contained":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
 
 
-<script src="index_files/paged-0.20/js/config.js"></script>
-<script src="index_files/paged-0.20/js/paged.js"></script>
-<script src="index_files/paged-0.20/js/hooks.js"></script>
+<script src="index_files/paged-0.22/js/config.js"></script>
+<script src="index_files/paged-0.22/js/paged.js"></script>
+<script src="index_files/paged-0.22/js/hooks.js"></script>
 
 
 
@@ -46,7 +46,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2025-03-04</h2>
+<h2 class="date">Updated 2025-05-24</h2>
 </div>
 </div>
 
@@ -55,10 +55,7 @@
 
 <div class="main">
 <div class="download">
-<p>Download PDF
-<a href="https://github.com/jim-wright90/wright_cv/raw/main/index.pdf" class="icon-block">
-<i class="fas fafooter fa-download"></i>
-</a></p>
+
 </div>
 <div class = "footer",>
   <a href="https://github.com/Jim-Wright90" class="icon-block">
@@ -116,7 +113,7 @@ Contact information
 <col width="46%" />
 </colgroup>
 <thead>
-<tr class="header">
+<tr>
 <th align="left">
 right
 </th>
@@ -126,7 +123,7 @@ right
 </tr>
 </thead>
 <tbody>
-<tr class="odd">
+<tr>
 <td align="left">
 <span style="color: #454545"><i class="fas fa-envelope"></i></span>
 <a href="mailto:jjwright90@gmail.com" class="email">jjwright90@gmail.com</a>
@@ -134,7 +131,7 @@ right
 <td align="right">
 </td>
 </tr>
-<tr class="even">
+<tr>
 <td align="left">
 <span style="color: #454545"><i class="fas fa-envelope"></i></span>
 <a href="mailto:jim@appliedsurveyresearch.org" class="email">jim@appliedsurveyresearch.org</a>
@@ -142,7 +139,7 @@ right
 <td align="right">
 </td>
 </tr>
-<tr class="odd">
+<tr>
 <td align="left">
 <span style="color: #454545"><i class="fab fa-github"></i></span> <a
 href="https://github.com/Jim-Wright90">Jim-Wright90</a>
@@ -150,7 +147,7 @@ href="https://github.com/Jim-Wright90">Jim-Wright90</a>
 <td align="right">
 </td>
 </tr>
-<tr class="even">
+<tr>
 <td align="left">
 <span style="color: #454545"><i class="fab fa-linkedin"></i></span> <a
 href="https://www.linkedin.com/in/jim-wright-a944698b/">Jim
@@ -159,7 +156,7 @@ Wright</a>
 <td align="right">
 </td>
 </tr>
-<tr class="odd">
+<tr>
 <td align="left">
 <span style="color: #454545"><i class="fab fa-orcid"></i></span> <a
 href="https://orcid.org/my-orcid?orcid=0000-0003-3035-7003">Jim
@@ -284,12 +281,24 @@ Wright</a>
 <h2>Selected Project Experience</h2>
 <table>
 <colgroup>
-<col width="2%" />
-<col width="20%" />
-<col width="9%" />
-<col width="67%" />
+<col width="1%" />
+<col width="14%" />
+<col width="6%" />
+<col width="77%" />
 </colgroup>
 <tbody>
+<tr class="odd">
+<td align="left">2024 — current</td>
+<td align="left"><a href="https://jim-asr.shinyapps.io/KernCountyImmunizationCoalition_SurveyResults/"><span style="font-weight: 500">Lake, Kern, Siskiyou, Sutter, Yuba, and Ventura Counties, CA</span>, Applied Survey Research</a></td>
+<td align="left"></td>
+<td align="left">Lead Project Manager for ASR’s consulting work with six California First 5 County Commissions. Support Commission efforts related to annual program evaluation, including data collection, management, analysis, and reporting. Facilitate strategic planning initiatives, including the design and distribution of surveys via Qualtrics and the collection of qualitative data through focus groups and key informant interviews. Spearhead special projects, including the design, implementation, and analysis of key surveys such as the First 5 Kern Developmental Screening Gap Assessment and the Parent/Guardian Survey and Vaccination and Immunization for the Kery County Immunization Coalition.</td>
+</tr>
+<tr class="even">
+<td align="left">2024 — current</td>
+<td align="left"><a href="https://jim-asr.shinyapps.io/SantaCruz_UPK_Survey/"><span style="font-weight: 500">Butte, Plumas, and Santa Cruz County Offices of Education, CA</span>, Applied Survey Research</a></td>
+<td align="left"></td>
+<td align="left">Serve as Lead Project Manager for ASR’s consulting work with three California County Offices of Education. Oversee the design and execution of Needs Assessments and parent surveys focused on perceptions, barriers, and priorities related to child care availability, priorities, and barriers to access.</td>
+</tr>
 <tr class="odd">
 <td align="left">2023 — 2024</td>
 <td align="left"><span style="font-weight: 500">Rapid City, SD Area Schools Special Education Program Review</span>, Marzano Research</td>
@@ -419,71 +428,9 @@ Wright</a>
 </tr>
 </tbody>
 </table>
-</div>
-<div id="professional-affiliations" class="section level2">
-<h2>Professional Affiliations</h2>
-<table>
-<colgroup>
-<col width="9%" />
-<col width="90%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">2015 — current</td>
-<td align="left"><span style="font-weight: 500">American Speech-Language Hearing Association Special Interest Group 2: Neurophysiology and Neurogenic Speech and Language Disorders</span></td>
-</tr>
-</tbody>
-</table>
-</div>
-<div id="certification-and-licensure" class="section level2">
-<h2>Certification and Licensure</h2>
-<table>
-<colgroup>
-<col width="11%" />
-<col width="88%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">2022 — current</td>
-<td align="left"><span style="font-weight: 500">Certified reviewer group design research studies</span>, What Works Clearinghouse</td>
-</tr>
-<tr class="even">
-<td align="left">2022 — current</td>
-<td align="left"><span style="font-weight: 500">Certified reviewer single-case experimental design research studies</span>, What Works Clearinghouse</td>
-</tr>
-<tr class="odd">
-<td align="left">2017 — current</td>
-<td align="left"><span style="font-weight: 500">License in Speech-Language Pathology</span>, State of Oregon</td>
-</tr>
-<tr class="even">
-<td align="left">2015 — current</td>
-<td align="left"><span style="font-weight: 500">License in Speech-Language Pathology</span>, State of Illinois</td>
-</tr>
-<tr class="odd">
-<td align="left">2015 — current</td>
-<td align="left"><span style="font-weight: 500">Certificate of Clinical Competence</span>, American Speech-Language Hearing Association</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div id="professional-training" class="section level2">
-<h2>Professional Training</h2>
-<table>
-<colgroup>
-<col width="12%" />
-<col width="87%" />
-</colgroup>
-<tbody>
-<tr class="odd">
-<td align="left">2014 — current</td>
-<td align="left"><span style="font-weight: 500">CPR certified by the American Heart Association</span></td>
-</tr>
-<tr class="even">
-<td align="left">2017 — current</td>
-<td align="left"><span style="font-weight: 500">Picture Exchange Communication System Level 1</span>, Chicago Public Schools – Chicago, IL</td>
-</tr>
-</tbody>
-</table>
+<!-- ## Professional Affiliations  -->
+<!-- ## Certification and Licensure  -->
+<!-- ## Professional Training  -->
 </div>
 <div id="programming-skills" class="section level2">
 <h2>Programming Skills</h2>
@@ -621,39 +568,39 @@ Wright</a>
 </colgroup>
 <tbody>
 <tr class="odd">
+<td align="left">2025</td>
+<td align="left">12.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> (2025). Parent/Guardian Survey on Childhood Immunization and Vaccination: Spring 2025 - Prepared for the Kern County Immunization Coalition. <em>Applied Survey Research</em>.</td>
+</tr>
+<tr class="even">
 <td align="left">2024</td>
 <td align="left">11.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span>, Usacheva, M., &amp; Flamenco, A (2024). Youth Suicide Prevention Gap Analysis - Prepared for the Sacramento County Department of Health Services, Division of Behavioral Health Services. <em>Applied Survey Research</em>.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left"></td>
 <td align="left">10.</td>
-<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Colvig-Niclai, L (2024). Developmental Screening Gap Asessment - Prepared for First 5 Kern County. <em>Applied Survey Research</em>.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Colvig-Niclai, L (2024). Developmental Screening Gap Assessment - Prepared for First 5 Kern County. <em>Applied Survey Research</em>.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left"></td>
 <td align="left">9.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Brutschy, S (2024). Universal Pre-Kindergarten and Mixed Delivery Survey: Spring 2024 - Prepared for the Santa Cruz County Office of Education. <em>Applied Survey Research</em>.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left"></td>
 <td align="left">8.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Colvig-Niclai, L (2024). Universal Pre-Kindergarten and Mixed Delivery Survey: Spring 2024 - Prepared for the Butte County Office of Education. <em>Applied Survey Research</em>.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">2023</td>
 <td align="left">7.</td>
 <td align="left"><span style="font-weight: 500">Wright, J.</span>, Rosario, E., Schwartzbard, R., &amp; Scott, C (2023). WY BILT project: Year 3 annual report - Prepared for the Wyoming Department of Education. <em>Marzano Research</em>.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left"></td>
 <td align="left">6.</td>
 <td align="left">Cherasaro, T., Keough, S., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Re-Imagining Remote Education in South Dakota: The ESF-REM Project; Final evaluation report - Prepared for the South Dakota Department of Education. <em>Marzano Research</em>.</td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left">5.</td>
-<td align="left">Scott, C., Wolfe, C., Rice, D., &amp; <span style="font-weight: 500">Wright, J.</span> (2023). Wyoming Accountability Part 1: An examination of the current system - Prepared for the Wyoming Department of Education. <em>Marzano Research</em>.</td>
 </tr>
 </tbody>
 </table>
